# mfo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  mfo_design_notes_spec.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  PLUGINS.md  USER_GUIDE.md
man/: mfo.1
scripts/: build-docs.sh
src/mfo/: __init__.py
src/mfo/cli/: __init__.py  app.py  config.py  logging.py  manpage.py  stages.py
src/mfo/core/: __init__.py  assets.py  confidence.py  context.py  enums.py  geometry.py  glossary.py  grouping.py  ids.py  models.py  parallel.py  pipeline.py  plugins.py  presets.py  reading_order.py  series.py  traceability.py
src/mfo/language/: __init__.py  assist.py  ocr_correct.py  translate.py  transliterate.py
src/mfo/render/: __init__.py  composite.py  mask.py  shape.py  typeset.py
src/mfo/sample/: __init__.py
src/mfo/storage/: __init__.py  assist.py  atomic.py  cache.py  confidence.py  correct_ocr.py  db.py  detect.py  edits.py  export.py  grouping.py  hashing.py  history.py  ingest.py  layout.py  manifest.py  mapping.py  ocr.py  pipeline_state.py  preprocess.py  presets.py  project.py  reading_order.py  render.py  series.py  sfx.py  translate.py
src/mfo/ui/: __init__.py  review.py  server.py
src/mfo/ui/static/: app.css  app.js  index.html
src/mfo/vision/: __init__.py  _paddle.py  detect.py  images.py  ingest.py  ocr.py  panels.py  preprocess.py  sfx.py
tests/: test_cli.py  test_cli_manpage.py  test_cli_models.py  test_core_assets.py  test_core_confidence.py  test_core_context.py  test_core_glossary.py  test_core_grouping.py  test_core_parallel.py  test_core_plugins.py  test_core_presets.py  test_core_reading_order.py  test_core_series.py  test_core_traceability.py  test_ids.py  test_language_assist.py  test_language_ocr_correct.py  test_language_translate.py  test_language_transliterate.py  test_models.py  test_pipeline.py  test_render_composite.py  test_render_mask.py  test_render_shape.py  test_render_typeset.py  test_resume.py  test_sample_smoke.py  test_smoke.py  test_storage_assist.py  test_storage_atomic.py  test_storage_cache.py  test_storage_confidence.py  test_storage_correct_ocr.py  test_storage_db.py  test_storage_detect.py  test_storage_edits.py  test_storage_export.py  test_storage_grouping.py  test_storage_history.py  test_storage_ingest.py  (+19 more)
