[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfo"
version = "0.0.0"
description = "Manhua Fanyi OCR / Translation — a local-first manga/manhua OCR and context-aware translation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "mfo contributors" }]
keywords = ["manga", "manhua", "ocr", "translation", "scanlation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/farkasau/mfo"
Repository = "https://github.com/farkasau/mfo"

[project.scripts]
mfo = "mfo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mfo"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]

[tool.ruff.lint.isort]
known-first-party = ["mfo"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
