[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfo"
version = "0.0.0"
description = "Manhua Fanyi OCR / Translation — a local-first manga/manhua OCR and context-aware translation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "mfo contributors" }]
keywords = ["manga", "manhua", "ocr", "translation", "scanlation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pillow>=10.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
ocr = [
    "manga-ocr>=0.1",
]
translate = [
    "argostranslate>=1.9",
]
review = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/farkasau/mfo"
Repository = "https://github.com/farkasau/mfo"

[project.scripts]
mfo = "mfo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mfo"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]

[tool.ruff.lint.isort]
known-first-party = ["mfo"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

# manga-ocr is an optional dependency (the `ocr` extra) and ships no type stubs.
[[tool.mypy.overrides]]
module = ["manga_ocr.*"]
ignore_missing_imports = true

# argostranslate is an optional dependency (the `translate` extra) and ships no type stubs.
[[tool.mypy.overrides]]
module = ["argostranslate.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
